tests/typechecker/should_fail/parser_let_datatype_defined.csp
P = let
		datatype A = B | C.{0..1}
	within 2